fix(HugeImage): work on trying to align image on home screen to center, and fitting its dimensions to screen width

--- a/src/main/resources/home.css
+++ b/src/main/resources/home.css
@@ -78,7 +78,6 @@
     -fx-padding: 5;
 }
 
-.background-image{
-    -fx-background-size: cover;
-    -fx-background-position: center;
+.huge-image{
+    -fx-alignment: center;
 }
